force-app/main/default/objects/ADM_Coverage__c/fields/Actual_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Actual_Coverage__c</fullName>
    <label>Actual Coverage (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>