force-app/main/default/objects/ADM_Coverage__c/fields/Code_Coverage_Goal_Met__c.field-meta.xml
<CustomField>
    <fullName>Code_Coverage_Goal_Met__c</fullName>
    <formula>IF(  Coverage_Gap__c &gt;=0, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Coverage Goal Met</label>
    <type>Text</type>
</CustomField>