force-app/main/default/objects/ADM_Coverage__c/fields/Coverage_Gap__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Gap__c</fullName>
    <formula>Actual_Coverage__c - Target_Coverage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>