force-app/main/default/objects/ADM_Coverage__c/fields/Link_to_actual_report__c.field-meta.xml
<CustomField>
    <fullName>Link_to_actual_report__c</fullName>
    <label>Link to actual report</label>
    <type>Url</type>
</CustomField>