force-app/main/default/objects/ADM_Coverage__c/fields/Min_Package_Coverage_Met__c.field-meta.xml
<CustomField>
    <fullName>Min_Package_Coverage_Met__c</fullName>
    <formula>IF(Actual_Coverage__c&gt;=0.2, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Package Coverage Met</label>
    <type>Text</type>
</CustomField>