force-app/main/default/objects/ADM_Coverage__c/fields/NCLOC__c.field-meta.xml
<CustomField>
    <fullName>NCLOC__c</fullName>
    <label>NCLOC</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>