force-app/main/default/objects/ADM_Coverage__c/fields/Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Package_Name__c</fullName>
    <label>Package Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>