force-app/main/default/objects/ADM_Coverage__c/fields/statement__c.field-meta.xml
<CustomField>
    <fullName>statement__c</fullName>
    <label># of statement</label>
    <length>8</length>
    <type>Text</type>
</CustomField>