force-app/main/default/objects/ADM_Coverage__c/fields/Target_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Target_Coverage__c</fullName>
    <label>Target Coverage (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>