force-app/main/default/objects/ADM_Coverage__c/recordTypes/Feature.recordType-meta.xml
<RecordType>
    <fullName>Feature</fullName>
    <active>true</active>
    <description>Used to track feature specific coverage info</description>
    <label>Feature</label>
</RecordType>