force-app/main/default/objects/ADM_Coverage__c/recordTypes/Package.recordType-meta.xml
<RecordType>
    <fullName>Package</fullName>
    <active>true</active>
    <description>Used to track coverage info of each java package</description>
    <label>Package</label>
</RecordType>