force-app/main/default/objects/ADM_Coverage__c/recordTypes/PLSQL_Package.recordType-meta.xml
<RecordType>
    <fullName>PLSQL_Package</fullName>
    <active>true</active>
    <description>Used to track PLSQL package coverage</description>
    <label>PLSQL Package</label>
</RecordType>