force-app/main/default/objects/ADM_Coverage__c/listViews/All_d_2.listView-meta.xml
<ListView>
    <fullName>All_d_2</fullName>
    <columns>NAME</columns>
    <columns>Scrum_Team__c</columns>
    <columns>Target_Coverage__c</columns>
    <columns>Actual_Coverage__c</columns>
    <columns>Coverage_Gap__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>