force-app/main/default/objects/ADM_Coverage__c/listViews/APIteamowned.listView-meta.xml
<ListView>
    <fullName>APIteamowned</fullName>
    <columns>NAME</columns>
    <columns>Actual_Coverage__c</columns>
    <columns>Target_Coverage__c</columns>
    <columns>Coverage_Gap__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scrum_Team__c</field>
        <operation>contains</operation>
        <value>API</value>
    </filters>
    <label>API team owned</label>
</ListView>