force-app/main/default/objects/ADM_Coverage__c/listViews/Caltivites_Coverage.listView-meta.xml
<ListView>
    <fullName>Caltivites_Coverage</fullName>
    <columns>NAME</columns>
    <columns>Module_Name__c</columns>
    <columns>Min_Package_Coverage_Met__c</columns>
    <columns>Actual_Coverage__c</columns>
    <columns>Target_Coverage__c</columns>
    <columns>Coverage_Gap__c</columns>
    <columns>Code_Coverage_Goal_Met__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scrum_Team__c</field>
        <operation>equals</operation>
        <value>Calendar and Activities</value>
    </filters>
    <label>Caltivites Coverage</label>
</ListView>