force-app/main/default/objects/ADM_Coverage__c/listViews/KMSTowned.listView-meta.xml
<ListView>
    <fullName>KMSTowned</fullName>
    <columns>NAME</columns>
    <columns>Actual_Coverage__c</columns>
    <columns>Target_Coverage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scrum_Team__c</field>
        <operation>equals</operation>
        <value>Search</value>
    </filters>
    <label>Search owned</label>
</ListView>