force-app/main/default/objects/ADM_Coverage__c/listViews/Package_Coverage_Core.listView-meta.xml
<ListView>
    <fullName>Package_Coverage_Core</fullName>
    <columns>NAME</columns>
    <columns>Actual_Coverage__c</columns>
    <columns>Scrum_Team__c</columns>
    <columns>Module_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ADM_Coverage__c.Package</value>
    </filters>
    <filters>
        <field>Scrum_Team__c</field>
        <operation>equals</operation>
        <value>Core Infrastructure</value>
    </filters>
    <label>Package Coverage (Core)</label>
</ListView>