force-app/main/default/objects/ADM_Coverage__c/listViews/PackageCoveragetemp.listView-meta.xml
<ListView>
    <fullName>PackageCoveragetemp</fullName>
    <columns>NAME</columns>
    <columns>Actual_Coverage__c</columns>
    <columns>Scrum_Team__c</columns>
    <columns>Module_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ADM_Coverage__c.PLSQL_Package</value>
    </filters>
    <label>PLSQL Package Coverage</label>
</ListView>