force-app/main/default/objects/ADM_Coverage__c/listViews/SFA_Core_PLSQL_Package_Coverage.listView-meta.xml
<ListView>
    <fullName>SFA_Core_PLSQL_Package_Coverage</fullName>
    <columns>NAME</columns>
    <columns>Actual_Coverage__c</columns>
    <columns>Scrum_Team__c</columns>
    <columns>Module_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ADM_Coverage__c.PLSQL_Package</value>
    </filters>
    <filters>
        <field>Scrum_Team__c</field>
        <operation>equals</operation>
        <value>SFA Core</value>
    </filters>
    <label>SFA Core PLSQL Coverage</label>
</ListView>