force-app/main/default/objects/ADM_Coverage__c/listViews/SFA_Forecasting_PLSQL_Coverage.listView-meta.xml
<ListView>
    <fullName>SFA_Forecasting_PLSQL_Coverage</fullName>
    <columns>NAME</columns>
    <columns>Min_Package_Coverage_Met__c</columns>
    <columns>Actual_Coverage__c</columns>
    <columns>Scrum_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scrum_Team__c</field>
        <operation>equals</operation>
        <value>SFA Forecasting</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ADM_Coverage__c.PLSQL_Package</value>
    </filters>
    <label>SFA Forecasting  PLSQL Coverage</label>
</ListView>