force-app/main/default/objects/ADM_Coverage__c/listViews/SharingTeamOwned.listView-meta.xml
<ListView>
    <fullName>SharingTeamOwned</fullName>
    <columns>NAME</columns>
    <columns>Actual_Coverage__c</columns>
    <columns>Target_Coverage__c</columns>
    <columns>Coverage_Gap__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scrum_Team__c</field>
        <operation>equals</operation>
        <value>App Security and Sharing</value>
    </filters>
    <label>Sharing Team Owned</label>
</ListView>